# httpx

./: .coveragerc  .coveragerc_py3.6  .coveragerc_py3.7  .deepsource.toml  .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-lint-config.yaml  .travis.yml  404.html  API.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  README.md  README_chinese.md  example.py  index.html  laba4  mkdocs.yml  noxfile.py  pyproject.toml  requirements-emscripten.txt  requirements.txt  rustfmt.toml  setup.cfg  setup.py  sitemap.xml  src.py  test-requirements.txt  test.py  unasync.py
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  1-issue.md  1-question.md  2-bug-report.md  3-feature-request.md  config.yml  read-only-issues.md
.github/workflows/: automerge.yml  publish.yml  test-suite.yml
advanced/authentication/: index.html
advanced/clients/: index.html
advanced/event-hooks/: index.html
advanced/extensions/: index.html
advanced/proxies/: index.html
advanced/resource-limits/: index.html
advanced/ssl/: index.html
advanced/text-encodings/: index.html
advanced/timeouts/: index.html
advanced/transports/: index.html
api/: index.html
async/: index.html
code_of_conduct/: index.html
compatibility/: index.html
contributing/: index.html
docs/: 1.0-release.md  about.md  advanced.md  api.md  async.md  clients.md  code_of_conduct.md  compatibility.md  connections.md  content-types.md  contributing.md  emscripten.md  environment_variables.md  exceptions.md  funding.md  headers.md  http2.md  index.md  logging.md  networking.md  parallel.md  parsers.md  quickstart.md  requests.md  responses.md  servers.md  streams.md  table-of-contents.md  third-party-packages.md  third_party_packages.md  troubleshooting.md  urls.md
docs/advanced/: authentication.md  clients.md  emscripten.md  event-hooks.md  extensions.md  json.md  network-options.md  proxies.md  query_parameters.md  resource-limits.md  ssl.md  text-encodings.md  timeouts.md  transports.md
docs/clients/: authentication.md  building-requests.md  http-version.md  overview.md  proxies.md  redirects.md  ssl.md  timeouts.md  transports.md
docs/community/: contributing.md
docs/css/: custom.css
docs/js/: chat.js  sidecar-1.5.0.js
docs/models/: extensions.md  headers.md  requests.md  responses.md  status_codes.md  urls.md
docs/overrides/: main.html  pyodide.html
docs/templates/: base.html
docs/topics/: httpx-1.0.md
docs/transports/: asgi.md  custom.md  http.md  index.md  mounts.md  wsgi.md
environment_variables/: index.html
exceptions/: index.html
http2/: index.html
http3/: __init__.py  __version__.py  api.py  auth.py  client.py  concurrency.py  config.py  decoders.py  decorators.py  exceptions.py  interfaces.py  models.py  multipart.py  status_codes.py  utils.py
http3/dispatch/: __init__.py  asgi.py  connection.py  connection_pool.py  http11.py  http2.py  threaded.py  wsgi.py
httpcore/: __init__.py  adapters.py  api.py  auth.py  client.py  compat.py  concurrency.py  config.py  connection.py  connection_pool.py  connectionpool.py  connections.py  constants.py  cookies.py  datastructures.py  decoders.py  environment.py  exceptions.py  http11.py  http2.py  interfaces.py  models.py  parallel.py  pool.py  redirects.py  status_codes.py  streams.py  structures.py  sync.py  utils.py
httpcore/adapters/: __init__.py  authentication.py  cookies.py  environment.py  redirects.py
httpcore/backends/: __init__.py  default.py  sync.py
httpcore/dispatch/: connection.py  connection_pool.py  http11.py  http2.py  threaded.py
httpx/: __init__.py  __version__.py  _api.py  _auth.py  _client.py  _codecs.py  _compat.py  _concurrency.py  _config.py  _content.py  _content_streams.py  _decoders.py  _exceptions.py  _main.py  _middleware.py  _models.py  _multipart.py  _requests.py  _status_codes.py  _types.py  _urlparse.py  _urls.py  _utils.py  api.py  auth.py  client.py  compat.py  concurrency.py  config.py  content.py  content_streams.py  decoders.py  decorators.py  exceptions.py  extras.py  interfaces.py  jsonlib.py  middleware.py  models.py  multipart.py  (+7 more)
httpx/_apps/: apps.py  routing.py  wsgi.py
httpx/_async/: api.py  client.py  models.py  unasync_utils.py
httpx/_backends/: asyncio.py  auto.py  base.py  trio.py
httpx/_cli/: cli.py  main.py  utils.py
httpx/_clients/: __init__.py  _async_client.py  _base.py  _sync_client.py
httpx/_core/: __init__.py  base.py  synchronization.py
httpx/_dispatch/: __init__.py  asgi.py  base.py  connection.py  connection_pool.py  http11.py  http2.py  proxy_http.py  urllib3.py  wsgi.py
httpx/_transports/: __init__.py  asgi.py  base.py  default.py  emscripten.py  httpcore.py  jsfetch.py  mock.py  mountpoints.py  mounts.py  urllib3.py  wsgi.py
httpx/backends/: asyncio.py  auto.py  base.py  fixes.py  sync.py  trio.py
httpx/compat/: contextvars.py
httpx/concurrency/: anyio.py  asyncio.py  (+5 more)
logging/: index.html
quickstart/: index.html
rfc/: HXEP_0001.md
scripts/: build  check  clean  compile  coverage  docs  docs-build  docs-serve  install  lint  publish  sync-version  test  unasync  unasync.py
search/: search_index.json
src/: err.rs  lib.rs  py_module.rs  urlparse.rs  urls.rs
tests/: .netrc  common.py  compat.py  concurrency.py  conftest.py  server.py  test_api.py  test_asgi.py  test_auth.py  test_client.py  test_concurrency.py  test_config.py  test_connections.py  test_content.py  test_content_streams.py  test_decoders.py  test_decoding.py  test_default_transports.py  test_emscripten.py  test_event_hooks.py  test_exceptions.py  test_exported_members.py  test_headers.py  test_http2.py  test_main.py  test_multipart.py  test_network.py  test_parsers.py  test_pickle.py  test_pool.py  test_quickstart.py  test_request.py  test_requests.py  test_response.py  test_responses.py  test_status_codes.py  test_stream.py  test_streams.py  test_sync.py  test_timeouts.py  (+6 more)
third_party_packages/: index.html
troubleshooting/: index.html
(+180 files in other folders)
