[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "httpx"
description = "HTTP, for Python."
requires-python = ">=3.10"
authors = [
    { name = "Tom Christie", email = "tom@tomchristie.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "certifi",
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/httpx/__version__.py"
