[metadata]
name = httpx
version = attr: src.get_version
url = https://github.com/encode/httpx
license = BSD
description = The next generation HTTP client.
long_description = file: README.md, file: CHANGELOG.md
long_description_content_type = text/markdown
author = Tom Christie
author_email = tom@tomchristie.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Framework :: AsyncIO
    Framework :: Trio
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    certifi
    chardet==3.*
    h11==0.8.*
    h2==3.*
    hstspreload>=2019.8.27
    idna==2.*
    rfc3986==1.*

[options.packages.find]
include =
    httpx
    httpx.*

[options.package_data]
httpx =
    py.typed

[bdist_wheel]
universal = 1

[flake8]
ignore = W503, E203, B305
max-line-length = 88

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[tool:isort]
combine_as_imports = True
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = httpx,httpxprof,tests
known_third_party = brotli,certifi,chardet,click,cryptography,h11,h2,hstspreload,nox,pytest,requests,rfc3986,setuptools,tqdm,trio,trustme,uvicorn
line_length = 88
multi_line_output = 3

[tool:pytest]
addopts = --cov=httpx --cov=tests --cov-report=term-missing -rxXs
markers =
  copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup
