[metadata]
name = httpx
author = Tom Christie
author_email = tom@tomchristie.com
license = BSD
description = The next generation HTTP client.
url = https://github.com/encode/httpx
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Framework :: AsyncIO
    Framework :: Trio
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

project_urls =
    Documentation = https://www.python-httpx.org
    Source = https://github.com/encode/httpx


[options]
zip_safe = False
install_requires =
    certifi
    sniffio
    rfc3986[idna2008]>=1.3,<2
    httpcore==0.12.*
include_package_data = True
python_requires = >=3.6
packages = find: 

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
http2 = h2==3.*
brotli = brotlipy==0.7.*

[options.package_data]
httpx = py.typed

[flake8]
ignore = W503, E203, B305
max-line-length = 120

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[mypy-tests.*]
disallow_untyped_defs = False
check_untyped_defs = True

[tool:isort]
profile = black
combine_as_imports = True

[tool:pytest]
addopts = -rxXs
markers =
  copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup

[coverage:run]
omit = venv/*
include = httpx/*, tests/*
